Closed
Bug 1457758
Opened 7 years ago
Closed 7 years ago
Crash in nvd3dumx_cfg.dll@0x9d471c
Categories
(Core :: Graphics, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla62
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | fixed |
| firefox60 | --- | wontfix |
| firefox61 | --- | fixed |
| firefox62 | --- | fixed |
People
(Reporter: jseward, Assigned: bas.schouten)
References
Details
(Keywords: crash, Whiteboard: [gfx-noted])
Crash Data
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
davidb
:
review+
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr60+
|
Details |
This bug was filed from the Socorro interface and is
report bp-e68668ad-3457-4255-ad00-b07bd0180428.
=============================================================
This is topcrash 7 in the Windows nightly 20180426100055, with
21 crashes in around 15 different installations. The stacks are
pretty much useless (AFAICS) but perhaps the driver involved is
something we can block? Filing on that basis.
Top 6 frames of crashing thread:
0 nvd3dumx_cfg.dll nvd3dumx_cfg.dll@0x9d471c
1 nvd3dumx_cfg.dll nvd3dumx_cfg.dll@0xa9faaf
2 nvd3dumx_cfg.dll nvd3dumx_cfg.dll@0x9cf36c
3 nvd3dumx_cfg.dll nvd3dumx_cfg.dll@0xc29a65
4 nvd3dumx_cfg.dll nvd3dumx_cfg.dll@0xaa19ee
5 nvd3dumx_cfg.dll nvd3dumx_cfg.dll@0x9d4cff
=============================================================
| Reporter | ||
Updated•7 years ago
|
Flags: needinfo?(bugmail)
Comment 2•7 years ago
|
||
might be due to a recent nvidia driver update - crash reports commonly show version 24.21.13.9731.
Crash Signature: [@ nvd3dumx_cfg.dll@0x9d471c] → [@ nvd3dumx_cfg.dll@0x9d471c]
[@ nvd3dumx.dll]
Hardware: Unspecified → x86_64
Comment 3•7 years ago
|
||
do we have contacts at nvidia that we can reach out to about this crash spike?
Flags: needinfo?(milan)
I'm going to guess that this new driver version, which fixed a crash in Windows 7, and the reason we blocked drivers in bug 1433058 and bug 1419264 has perhaps introduced a problem in Windows 10 that we're hitting in this bug. Bas, would that make sense?
I'll send e-mail to Nvidia.
Flags: needinfo?(milan) → needinfo?(bas)
| Assignee | ||
Comment 5•7 years ago
|
||
(In reply to Milan Sreckovic [:milan] from comment #4)
> I'm going to guess that this new driver version, which fixed a crash in
> Windows 7, and the reason we blocked drivers in bug 1433058 and bug 1419264
> has perhaps introduced a problem in Windows 10 that we're hitting in this
> bug. Bas, would that make sense?
> I'll send e-mail to Nvidia.
Neither of those bugs affects Windows 7 or introduced any changes to our Win7 users as far as I can see. This appears to be a completely unrelated new crash on NVidia. I don't see any evidence this is TDR related either, this is just a null ptr dereference.
Flags: needinfo?(bas)
Apparently 397.31 has a problem, and the follow up, 397.47 fixes this problem. We could block this version, or perhaps see if the update fixes the problems for enough people that we don't have to worry about it.
Talking to relman, this is low enough percentage, and early adopters, so we're going to leave them to pick up the latest driver and not uplift the blocking at high urgency. Keep this open, and if it isn't resolved by next week, we can do a downloadable blocklist update.
Comment 8•7 years ago
|
||
Did NVIDIA say when the update would ship?
(In reply to Mike Shaver (:shaver -- probably not reading bugmail closely) from comment #8)
> Did NVIDIA say when the update would ship?
"Later today" said on May 2, 2018.
Comment 10•7 years ago
|
||
GeForce Hotfix driver version 397.55 is now out: http://nvidia.custhelp.com/app/answers/detail/a_id/4661
Updated•7 years ago
|
Assignee: nobody → bas
Priority: -- → P1
Whiteboard: [gfx-noted]
Comment 11•7 years ago
|
||
Version 397.64 was released today. Not sure how fast we'll be able to see what affect it has, though.
Comment 12•7 years ago
|
||
I haven't seen any issues since installing the hotfix driver, and 397.64 seems fine too. I doubt 397.31 will have much staying power as it had other problems besides these crashes (and Nvidia have removed the download link to it).
Comment 13•7 years ago
|
||
I'm not seeing any nVidia driver crashes on versions newer than 397.31. Can we please proceed with the blocklisting?
Flags: needinfo?(bas)
Comment 14•7 years ago
|
||
Great! Bas who would do the patch here?
Comment 15•7 years ago
|
||
the crash volume is fairly quickly declining on its own during the past couple of days btw.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 17•7 years ago
|
||
I agree with other commenters here this may not be too relevant, but here's a patch just in case we want to ship it (I doubt by the time we ship this to users there'd be many of this driver left in the wild).
Flags: needinfo?(bas)
Comment 18•7 years ago
|
||
I had figured this bug and bug 1458303 went hand in hand with respect to any blocklisting we wanted to do.
Comment 19•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8976041 [details]
Bug 1457758: Blacklist NVidia driver 397.31.
https://reviewboard.mozilla.org/r/244240/#review250698
Attachment #8976041 -
Flags: review?(dbolter) → review+
Comment 20•7 years ago
|
||
Per IRC... typo. Should be 24.21.13.9731
Comment 21•7 years ago
|
||
Pushed by bschouten@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/065e3853fb8f
Blacklist NVidia driver 397.31. r=davidb
Comment 22•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox62:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Updated•7 years ago
|
status-firefox60:
--- → affected
status-firefox61:
--- → affected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → affected
Comment 23•7 years ago
|
||
Please request Beta and ESR60 approval on this when you get a chance.
Flags: needinfo?(bas)
| Assignee | ||
Comment 24•7 years ago
|
||
Comment on attachment 8976041 [details]
Bug 1457758: Blacklist NVidia driver 397.31.
[Approval Request Comment]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: Blacklist of driver released after ESR
User impact if declined: Crashes for certain NVidia drivers
Fix Landed on Version: 62
Risk to taking this patch (and alternatives if risky): Almost none
String or UUID changes made by this patch: None
See https://wiki.mozilla.org/Release_Management/ESR_Landing_Process for more info.
Approval Request Comment
[Feature/Bug causing the regression]: NVidia driver release
[User impact if declined]: Content process crashes
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: Blacklisting of a rare NVidia driver
[String changes made/needed]: None
Flags: needinfo?(bas)
Attachment #8976041 -
Flags: approval-mozilla-esr60?
Attachment #8976041 -
Flags: approval-mozilla-beta?
Comment 25•7 years ago
|
||
Comment on attachment 8976041 [details]
Bug 1457758: Blacklist NVidia driver 397.31.
Blacklists a known-buggy nVidia driver. Approved for 61.0b8 and ESR 60.1.
Attachment #8976041 -
Flags: approval-mozilla-esr60?
Attachment #8976041 -
Flags: approval-mozilla-esr60+
Attachment #8976041 -
Flags: approval-mozilla-beta?
Attachment #8976041 -
Flags: approval-mozilla-beta+
Comment 26•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
Comment 27•7 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•