Bug 1457758 - Blacklist NVidia driver 397.31. r=davidb, a=RyanVM

MozReview-Commit-ID: 9IomfIWkmpb